# bmc-os

./: .gitignore  Cargo.toml  Makefile  build-os.sh  build.rs  its-morbin-time.rgb  readme.md  run_os.sh  test_os.sh  x86.json
.cargo/: config.toml
engine/: Cargo.toml
engine/src/: engine.rs  handler.rs  lib.rs
engine/src/evaluation/: evaluator.rs  map_eval.rs  mod.rs  piece_eval.rs
engine/src/evaluation/nnue/: features.rs  layer.rs  mod.rs  model.nnue  nnue_conf.rs  utils.rs  vectors.rs
engine/src/search/: mod.rs  move_ordering.rs  position.rs  searcher.rs  see.rs  tt.rs
engine/src/search/searcher/: killer.rs  quiese.rs
engine/src/utils/: chessutils.rs  mod.rs  tablesize.rs
os/: Cargo.toml
os/src/: main.rs
sprites/: Black.data  BlackBishop.data  BlackKing.data  BlackKnight.data  BlackPawn.data  BlackQueen.data  BlackRook.data  ChessBoardBorder.data  EmptySquare.data  EngineThinking.data  KingBlush.data  Mouse.data  PieceCapture.data  PieceDestination.data  PieceSelected.data  PromotionBackground.data  Text.data  White.data  WhiteBishop.data  WhiteKing.data  WhiteKnight.data  WhitePawn.data  WhiteQueen.data  WhiteRook.data  chessboard.data
src/: allocator.rs  bootloader.asm  entities.rs  events.rs  game.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  queue.rs
src/asm/: bootloader.asm  disk_load.asm  gdt.asm  print_hex.asm  print_string.asm  print_string_pm.asm  switch_to_pm.asm
src/display/: color.rs  graphics.rs  mod.rs  sprite.rs  text.rs  vga_buffer.rs
src/entities/: button.rs  chessboard.rs  colorselector.rs  difficultyselector.rs  (+6 more)
(+3 files in other folders)
