[package]
name = "bmc-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = {version = "0.9.23", features = ["map_physical_memory"]}
bresenham = "0.1.1"
cozy-chess = "0.3.2"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
pc-keyboard = "0.5.0"
pic8259 = "0.10.4"
spin = "0.9.8"
vga = "0.2.8"
volatile = "0.4.6"
x86_64 = "0.14.10"
engine = { path = './engine' }
arrayvec = { version = "0.7.2", default-features = false }
linked_list_allocator = "0.9.0"