[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.3.2"
static_assertions = "1.1.0"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
bytemuck = "1.12.1"
rand = { version = "0.8.5", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
introsort = { version = "0.6.0", default-features = false }
